# hr-agentic-ai-project

./: .gitignore  .langchain.db  Dockerfile  README.md  docker-compose.yml  hr_database.db  pyproject.toml  requirements.txt  run.py  run_rag.py
app/: main.py
app/agents/: candidate_matcher.py  job_parser.py  resume_screener.py
app/core/: caching.py  database.py
app/models/: candidate.py  job.py  report.py
app/services/: rag_service.py  screening_services.py
app/utils/: pii_masker.py
scripts/: query_practice.py  seed_db.py
